--- a/week5/19.md
+++ b/week5/19.md
@@ -1,9 +1,113 @@
 # Link to Question
 (브루트포스) 자와 각도기: https://www.acmicpc.net/problem/2916
+56m36s35
 
 ## Question Summary
 
 ## My solution summary
+```
+Mirko knows how to construct some angles using the straightedge and compass and knows how to subtract and add any two angels he constructs.
+```
 
+보니까 번역이 이상해서 문제가 어려워지는 경우가 있는것 같다. 한국어 설명을 봤을땐 2개의 각을 꼭 정하는건지 마는건지 애매했는데, 원문에는 2개의 각을 선택하라고 했다(자기가 만들어 낸것도 포함이다),즉 어찌됬든 모든 두가지 각의 조합을 만들어 내면 된다. 원래는 문제 이해를 이상하게 해서 재귀호출로 복잡하게 처리했는데 그냥 단순 for문을 두개를사용해도 됬다. 대신에 for문에서 loop를도는 벡터의 길이가 좀 변할 수도 있긴하다. 
+
+```c++
+vector<int> possible(361, false); // 만들 수 있는 것 체크
+vector<int> chang;
+```
+possible은 가능한 각, chang은 창영씨가 만들수 있는 각을 저장한다. 
+
+```c++
+bool canMakeAngle(int targetAngle){
+    for(int i = 0; i < chang.size(); i++){
+        // 0번째 값을 다 확인하고 1번째값을 기준으로 구할때 새로운 값이 추가됬다면 0번째랑 새로 추가된 각의 조합은 아직 구하지 않지만 결국에 for문이 
+        // 새로 추가된 값에 대해서 합이나 빼기를 구할때 0번째랑도 계산하게 된다.
+        for(int j = 0; j < chang.size(); j++){
+            // 두개의 각을 무조선 선택
+            int first = chang[i];
+            int second = chang[j];
+
+            int sum = (first + second) % 360;
+
+            if(!possible[sum]){
+                // 새로 추가됨
+                chang.push_back(sum);
+                possible[sum] = true;
+            }
+
+            int sub = (first - second > 0) ? (first-second)%360: (second-first) % 360;
+            if(!possible[sub]){
+                // 새로 추가됨
+                chang.push_back(sub);
+                possible[sub] = true;
+            }
+
+        }
+    }
+    return possible[targetAngle];
+}
+```
+
+- 이거 for문 두개를 중첩한건 창영씨가 만들 수 있는 각 두개의 조합을 무조건 다 만들어 내기 위해서이다. 창영쓰가 새로 만들어낼 수 잇는 각이 생기면 chang vector가 길어진다. 그래도 상관없고 해당 각을 선택하고 전체 각에 대해서 어떤 각을 구할 수 있는지 계속 구하므로 새로운 각이 추가되더라도 기존에 가능한 각들이랑도 조합을 항상 만들어낼 수 있다. 또한 자기자신을 두번 더하는것도 가능하다고 하는데 그것까지 처리가 가능하다. 
+
+- 후기
+이제 문제가 약간 뚱딴지 같으면 영문을 봐야겠다. 
 ## My code
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm>
+#include <queue>
 
+using namespace std;
+int n, k;
+
+vector<int> possible(361, false); // 만들 수 있는 것 체크
+vector<int> chang;
+vector<int> selected(2, 0);
+
+bool canMakeAngle(int targetAngle){
+    for(int i = 0; i < chang.size(); i++){
+        for(int j = 0; j < chang.size(); j++){
+            // 두개의 각을 무조선 선택
+            int first = chang[i];
+            int second = chang[j];
+
+            int sum = (first + second) % 360;
+
+            if(!possible[sum]){
+                // 새로 추가됨
+                chang.push_back(sum);
+                possible[sum] = true;
+            }
+
+            int sub = (first - second > 0) ? (first-second)%360: (second-first) % 360;
+            if(!possible[sub]){
+                // 새로 추가됨
+                chang.push_back(sub);
+                possible[sub] = true;
+            }
+
+        }
+    }
+    return possible[targetAngle];
+}
+
+int main() {
+    cin >> n >> k;
+
+    possible[0] = true;
+    for(int i = 0; i < n; i++){
+        int angle;
+        cin >> angle;
+        chang.push_back(angle);
+        possible[angle] = true;
+    }
+
+    for(int i = 0; i < k; i++){
+        int targetAngle; cin >> targetAngle;
+        cout << (canMakeAngle(targetAngle) ? "YES\n" : "NO\n");
+    }
+    return 0;
+}
+```
