--- a/week6/20.md
+++ b/week6/20.md
@@ -1,8 +1,70 @@
 # Link to Question
 (브루트포스)한윤정이 이탈리아에 가서 아이스크림을 사먹는데: https://www.acmicpc.net/problem/2422
+
+14m46s14
+
 ## Question Summary
 
 ## My solution summary
+쉬운 문제가 좋다. 
 
 ## My code
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm>
+#include <queue>
 
+using namespace std;
+int n, m;
+int notOk[201][201]; // 0이면 괜찮은 조합, 1이면 망한 조합
+int selected[3];
+int answer;
+
+bool isPossible(){
+    // 0, 1
+    // 0, 2
+    // 1, 2
+    if(notOk[selected[0]][selected[1]] || notOk[selected[0]][selected[2]] || notOk[selected[1]][selected[2]]){
+        return false;
+    }
+    return true;
+}
+
+void recursive(int accCount, int curIndex){
+    if(accCount >= 3){
+        if(isPossible()){
+            answer++;
+        }
+        return;
+    }
+
+    if(curIndex > n){
+        return;
+    }
+
+    // 해당 맛 선택
+    selected[accCount] = curIndex; // 0개 누적이면 0번째에 쌓인다
+    recursive(accCount+1, curIndex+1);
+
+    // 해당 맛 안선택
+    recursive(accCount, curIndex+1);
+}
+
+int main() {
+    cin >> n >> m;
+
+    // 형편 없는 조합
+    while(m--){
+        int a, b; cin >> a >> b;
+        notOk[a][b] = 1;
+        notOk[b][a] = 1;
+    }
+
+    // 1부터 검사
+    recursive(0, 1);
+
+    cout << answer << "\n";
+    return 0;
+}
+```
