--- a/week6/22.md
+++ b/week6/22.md
@@ -1,9 +1,143 @@
 # Link to Question
 (브루트 포스)두 동전: https://www.acmicpc.net/problem/16197
+2h30m53s21
 
 ## Question Summary
 
 ## My solution summary
+뭐가 이렇게 어려운 건지.. 엄청난 삽질을 했다. visited를 두개를 써서 따로 해결하는게 나았다. 내머리로 두가지 경우를 동시에 고려하기가 어려웠다. 
+이상한 것은 둘다 방문한 경우라고 해도 제외할 경우가 아니라 포함 시켜야한다는거다. 왜냐하면 둘다 방문한 점이라고 해도, 지금 현재 위치에 따라서 가능한 경우일수도 있기 때문이다.
+
+- 범위가 벗어나는건 visited1, visited2가 -1일때이다 동시에 떨어지면 안되서 둘중에 하나가 -1일때만 답이다.
+  
+- 둘다 벽인 경우는 제외한다. 답도 없는 경우이다.
+
+- 하나만 벽에 부딪히면 벽에 부딪힌놈은 원래대로 좌표를 돌려준다. 아니면 냅둔다
+  - 근데 이렇게 했더니 두점이 겹치면 답이 없는 경우다. 당연하지. 둘이 같은데 있는데.
+  - 이제 이 경우에 대해서 탐색한다. 알고보니 visited는 딱히 필요가 없다. -1인 경우를 확인하기 위해서 정도만 필요하다. 왜냐면 각 위치에 따라서 둘다 방문했던 점이라해도 가능할 수 있기 때문이다. 
+
+
+
 
 ## My code
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm>
+#include <queue>
 
+using namespace std;
+
+int n, m;
+char arr[22][22];
+
+vector<vector<int>> visited1(22, vector<int> (22, -1)); // 동전 1의 방문 상태
+vector<vector<int>> visited2(22, vector<int> (22, -1)); // 동전 2의 방문 상태
+
+// 동전 두개
+vector<pair<int, int>> coin;
+
+int dx[4] = {1, 0, -1, 0};
+int dy[4] = {0, 1, 0, -1};
+
+int findRoute(){
+    queue<pair<vector<pair<int, int>>, int>> q; // {동전 두개, 이동한 횟수}
+    q.push({coin, 0}); //
+
+    while(!q.empty()){
+        pair<int, int> fc = q.front().first[0];
+        pair<int, int> sc = q.front().first[1];
+        int move = q.front().second;
+        q.pop();
+
+        if(move >= 10){
+            // 10번 됬음
+            break;
+        }
+
+        for(int i = 0; i < 4; i++){
+            int fx = fc.first + dx[i]; // 이동
+            int fy = fc.second + dy[i];
+
+            int sx = sc.first + dx[i]; // 이동
+            int sy = sc.second + dy[i];
+
+            // 범위 벗어나는것 여기서 다 잡음
+            if(visited1[fx][fy] == -1 && visited2[sx][sy] != -1){
+                return move + 1;
+            }
+            if(visited1[fx][fy] != -1 && visited2[sx][sy] == -1){
+                return move + 1;
+            }
+            // 둘다 동시에 떨어지면 넘어간다
+            if(visited1[fx][fy] == -1 && visited2[sx][sy] == -1){
+                continue;
+            }
+            // 둘다 벽에 부딪힌 경우 그냥 넘어간다
+            if(visited1[fx][fy] == 3 && visited2[sx][sy] == 3){
+                continue;
+            }
+
+            // 하나만 벽에 부딪힌 경우 좌표를 새로 구해본다
+            if(visited1[fx][fy] == 3 && visited2[sx][sy] != 3){
+                fx = fc.first;
+                fy = fc.second;
+            } else if(visited1[fx][fy] != 3 && visited2[sx][sy] == 3){
+                sx = sc.first;
+                sy = sc.second;
+            }
+
+            // 두점의 좌표가 같으면 답이 될 수 없다
+            if(fx == sx && fy == sy){
+                continue;
+            }
+
+            // 둘다 동시에 방문했던 점이면 답이 될 수 없다
+//            if(visited1[fx][fy] == 1 && visited2[sx][sy] == 1){
+//                cout << "type8" << "\n";
+//                continue;
+//            }
+
+            visited1[fx][fy] = 1;
+            visited2[sx][sy] = 1;
+            vector<pair<int, int>> temp;
+            temp.push_back({fx, fy});
+            temp.push_back({sx, sy});
+            q.push({temp, move+1});
+        }
+    }
+
+    return -1;
+}
+
+int main() {
+    cin >> n >> m;
+
+    for(int i = 1; i <= n; i++){
+        for(int j = 1; j <= m; j++){
+            cin >> arr[i][j];
+            if(arr[i][j] == 'o'){
+                coin.push_back({i, j});
+                if(coin.size() == 1){
+                    visited1[i][j] = 1; // 방문한 경우 표시
+                    visited2[i][j] = 1;
+                }else{
+                    visited2[i][j] = 1; // 방문한 경우 표시
+                    visited1[i][j] = 0;
+                }
+            }else if(arr[i][j] == '#'){
+                visited1[i][j] = 3; // 벽은 방문함으로 처리한다
+                visited2[i][j] = 3; // 벽은 방문함으로 처리한다
+            }else{
+                visited1[i][j] = 0; // 방문 안함 처리
+                visited2[i][j] = 0; // 방문 안함 처리
+            }
+        }
+    }
+
+    cout << findRoute() << "\n";
+
+    return 0;
+}
+
+```
