--- a/week6/21.md
+++ b/week6/21.md
@@ -1,9 +1,57 @@
 # Link to Question
 (브루트 포스) 부분수열의 합: https://www.acmicpc.net/problem/14225
+34m34s92
 
 ## Question Summary
 
 ## My solution summary
+문제 말귀를 못알아 들어서삽질하다 보니까, 재귀호출로 모든 경우만 만들어주면 됬다!
+
+뼛속까지 이과인들은 이런 문제가 잘 이해가 된다는걸까? 생각해보게 되는 문제였다. 종족이 다른 것 같다.
 
 ## My code
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm>
+#include <queue>
 
+using namespace std;
+
+bool possible[100000 * 20 + 1];
+vector<int> list;
+int n;
+
+void recursive(int acc, int index){
+    if(index >= list.size()){
+        possible[acc] = true;
+        return;
+    }
+
+    // 포함
+    recursive(acc + list[index], index+1);
+    // 미포함
+    recursive(acc, index+1);
+}
+
+int main() {
+    cin >> n;
+
+    for(int i = 0; i < n; i++){
+        int num; cin >> num;
+        possible[num] = true;
+        list.push_back(num);
+    }
+
+    recursive(0, 0);
+
+    for(int i = 1; i < (100000 * 20 + 1); i++){
+        if(possible[i] == false){
+            cout << i << "\n";
+            break;
+        }
+    }
+
+    return 0;
+}
+```
