--- a/week6/23.md
+++ b/week6/23.md
@@ -1,8 +1,93 @@
 # Link to Question
 (브루트 포스)에너지 모으기: https://www.acmicpc.net/problem/16198
+22m44s03
 
 ## Question Summary
 
 ## My solution summary
 
+- `vector<pair<int, pair<int, int>>> wlist;` 를 통해서 {에너지, {앞번호, 뒷번호}}의 벡터를 만든다
+    - 예를들어 {1,2,3,4}라고 배열이 오면 {1, {-1, 1}}, {2, {0, 2}}, {3, {1, 3}}, {4, {3, 4}}
+    - 두번째 앞번호 뒷번호 부분을 통해서 어떤 번호를 뽑고 좌우를 찾으려고 한다(그때그때마다 다 뺏다 넣었다하려면 힘들것 같아서)
+
+- `order`라는 벡터는 구슬을 뽑는 순서이다. 첫번째랑 마지막거는 안뽑는다해서 1부터 n-2 인덱스까지 뽑는 순서를 모두 구했다.
+
+- 각 순서에 대해서 `int calcEnergy(vector<pair<int, pair<int, int>>> wlist){`를 수행했다.
+  - wlist는 매번 새거가 필요해서 값을 넘겨줬다
+    ```c++
+        for(int i = 0; i < order.size(); i++){
+        int curOrder = order[i]; // 현재 꺼내는 번호
+
+        int prev = wlist[curOrder].second.first;
+        int next = wlist[curOrder].second.second;
+
+        result += (wlist[prev].first * wlist[next].first);
+
+        wlist[prev].second.second = next;
+        wlist[next].second.first = prev;
+    }
+    ```
+
+    현재 해당하는 번호를 뽑고, 해당하는 번호의 앞구슬과 뒷구슬을 가져온다. 그다음 그 해당하는 구슬의 에너지를 가져온다
+    그다음에 앞에 있던 구슬의 다음 구슬을 next라고 값을 바꾸고, 뒷구슬의 앞구슬은 prev라고 표시한다
+
+    
+
 ## My code
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm>
+#include <queue>
+
+using namespace std;
+
+int n;
+vector<int> order;
+int maxEnergy = 0;
+
+int calcEnergy(vector<pair<int, pair<int, int>>> wlist){
+    int result = 0;
+
+    for(int i = 0; i < order.size(); i++){
+        int curOrder = order[i]; // 현재 꺼내는 번호
+
+        int prev = wlist[curOrder].second.first;
+        int next = wlist[curOrder].second.second;
+
+        result += (wlist[prev].first * wlist[next].first);
+
+        wlist[prev].second.second = next;
+        wlist[next].second.first = prev;
+    }
+
+    return result;
+}
+
+int main() {
+   cin >> n;
+   for(int i = 1; i <= n-2; i++){
+       order.push_back(i);
+   }
+
+   vector<pair<int, pair<int, int>>> wlist;
+
+   for(int i = 0; i < n; i++){
+       int w; cin >> w;
+       wlist.push_back({w, {i-1, i+1}});
+   }
+
+   do{
+       int energy = calcEnergy(wlist);
+
+       if(maxEnergy < energy){
+           maxEnergy = energy;
+       }
+
+   }while(next_permutation(order.begin(), order.end()));
+
+   cout << maxEnergy << "\n";
+
+   return 0;
+}
+```
