--- a/week7/24.md
+++ b/week7/24.md
@@ -1,8 +1,361 @@
 # Link to Question
+
 (bfs)구슬탈출4: https://www.acmicpc.net/problem/15653
+
 ## Question Summary
+
+2h01m27s91(move 하는 부분을 잘모르겠다), 추가적으로 구현하는것 한시간반 정도
 
 ## My solution summary
 
+- 두개가 동시에 굴러가는 것은 함수로 분리를 했고, 여기서 좀 비효율적으로 처리한게 문제가 된것 같다.
+
+- visited의 경우에는 각 좌표를 rx, ry, bx, by 이런 좌표를 하나의 string으로 연결해서 어디를 방문했는지 안했는지를 체크했다.
+
 ## My code
 
+- 정답:
+
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm>
+#include <queue>
+#include <map>
+
+using namespace std;
+int n, m;
+char arr[11][11]; // n: 1 - n-2까지 / m: 1 - m-2 까지, 8888 까지 존재
+int hx, hy; // 구멍
+int rx, ry; // red
+int bx, by; // blue
+int dx[4] = {-1, 0, 1, 0};
+int dy[4] = {0, 1, 0, -1};
+
+map<string, int> visited;
+
+string toIndex(int rx, int ry, int bx, int by){
+    string res = "";
+    res += to_string(rx);
+    res += to_string(ry);
+    res += to_string(bx);
+    res += to_string(by);
+    return res;
+}
+
+pair<int, int> slide(int dire, int x, int y, char c){
+    while(true){
+        int nx = x + dx[dire];
+        int ny = y + dy[dire];
+
+        if(arr[nx][ny] == 'R' || arr[nx][ny] == 'B' || arr[nx][ny] == '#'){
+            break;
+        }else if(arr[nx][ny] == 'O'){
+
+            x = nx;
+            y = ny;
+            // 업데이트 해 주고나서 반환(O인 위치로!)
+            break;
+        }
+        x = nx;
+        y = ny;
+    }
+
+    if(arr[x][y] != 'O'){
+        arr[x][y] = c;
+    }
+
+    return {x, y};
+}
+
+string move(int dire, int rx, int ry, int bx, int by) {
+    // 굴러가는 방향
+    pair<int, int> r = {rx, ry};
+    pair<int, int> b = {bx, by};
+    if(dire == 0){
+        // 위방향
+        if(ry == by){
+            // 한줄에 있기때문에 x가 작은것부터 움직인다
+            if(rx < bx){
+                r = slide(dire, rx, ry, 'R');
+                b = slide(dire, bx, by, 'B');
+            }else{
+                b = slide(dire, bx, by, 'B');
+                r = slide(dire, rx, ry, 'R');
+            }
+        }else{
+            // 순서 상관없다
+            b = slide(dire, bx, by, 'B');
+            r = slide(dire, rx, ry, 'R');
+        }
+    }else if(dire == 1){
+        // 오른쪽 방향
+        if(rx == bx){
+            if(ry < by){
+                b = slide(dire, bx, by, 'B');
+                r = slide(dire, rx, ry, 'R');
+            }else{
+                r = slide(dire, rx, ry, 'R');
+                b = slide(dire, bx, by, 'B');
+            }
+        }else{
+            // 순서 상관없다
+            b = slide(dire, bx, by, 'B');
+            r = slide(dire, rx, ry, 'R');
+        }
+    }
+    else if(dire == 2){
+        if(ry == by){
+          // 한줄에 있으니까 x가 큰것 부터 움직인다
+          if(rx < bx){
+              b = slide(dire, bx, by, 'B');
+              r = slide(dire, rx, ry, 'R');
+          }else{
+              r = slide(dire, rx, ry, 'R');
+              b = slide(dire, bx, by, 'B');
+          }
+        }else{
+            // 순서 상관없다
+            b = slide(dire, bx, by, 'B');
+            r = slide(dire, rx, ry, 'R');
+        }
+    }else if(dire == 3){
+        if(rx == bx){
+            // 한줄에 있으니까 y가 작은것 부터 움직인다
+            if(ry < by){
+                r = slide(dire, rx, ry, 'R');
+                b = slide(dire, bx, by, 'B');
+            }else{
+                b = slide(dire, bx, by, 'B');
+                r = slide(dire, rx, ry, 'R');
+            }
+        }else{
+            // 순서 상관없다
+            b = slide(dire, bx, by, 'B');
+            r = slide(dire, rx, ry, 'R');
+        }
+    }
+
+
+    return toIndex(r.first, r.second, b.first, b.second);
+}
+
+
+int  bfs(){
+    queue<pair<string, int>> q;
+    string cur = toIndex(rx, ry, bx, by);
+    q.push({cur, 0});
+    visited[cur] = 1;
+
+    while(!q.empty()){
+        string index = q.front().first;
+        int crx = index[0] - '0';
+        int cry = index[1] - '0';
+        int cbx = index[2] - '0';
+        int cby = index[3] - '0';
+        int depth = q.front().second;
+        q.pop();
+
+        arr[crx][cry] = '.';
+        arr[cbx][cby] = '.';
+
+        for(int i = 0; i < 4; i++) {
+//            cout << "------------ i: " << i << " " << crx << cry << cbx << cby << "\n";
+            string nextIndex = move(i, crx, cry, cbx, cby);
+//            cout << "dire" << i << " " << nextIndex << "\n";
+            int nrx = nextIndex[0] - '0';
+            int nry = nextIndex[1] - '0';
+            int nbx = nextIndex[2] - '0';
+            int nby = nextIndex[3] - '0';
+
+            if(arr[nrx][nry] != 'O'){
+                arr[nrx][nry] = '.';
+            }
+            if(arr[nbx][nby] != 'O'){
+                arr[nbx][nby] = '.';
+            }
+
+            int nextDepth = depth + 1;
+//            cout << "---->>>>>>>" << nrx << ", " << nry << ", " << nbx << ", " << nby << "\n";
+//            cout << "hx" << hx << " " << hy << "\n";
+            if(visited.count(nextIndex)){
+                // 이미 있음
+                continue;
+            }
+
+            if(nbx == hx && nby == hy){
+                // 파란색이 굴러떨어짐
+                continue;
+            }
+
+            if(nrx == hx && nry == hy){
+//                cout << "next Depth \n";
+                return nextDepth;
+            }
+
+            visited[nextIndex] = 1;
+            q.push({nextIndex, nextDepth});
+        }
+
+//        arr[crx][cry] = '.';
+//        arr[cbx][cby] = '.';
+    }
+
+    return -1;
+}
+
+int main() {
+    cin >>n >> m;
+
+    for(int i = 0; i < n; i++){
+        for(int j = 0; j < m; j++){
+            cin >> arr[i][j];
+            if(arr[i][j] == 'O'){
+                hx = i; hy = j;
+            }else if(arr[i][j] == 'R'){
+                rx = i; ry = j;
+                arr[i][j] = '.';
+            }else if(arr[i][j] == 'B'){
+                bx = i; by = j;
+                arr[i][j] = '.';
+            }
+        }
+    }
+
+//    for(int i = 0; i < n; i++){
+//        for(int j = 0; j < m; j++){
+//            cout << arr[i][j] << " ";
+//        }
+//        cout << "\n";
+//    }
+
+    cout << bfs() << "\n";
+
+    return 0;
+}
+
+```
+
+- 굴러가는 방향 구현 덜된것:
+
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm>
+#include <queue>
+#include <map>
+
+using namespace std;
+int n, m;
+char arr[11][11]; // n: 1 - n-2까지 / m: 1 - m-2 까지, 8888 까지 존재
+int hx, hy; // 구멍
+int rx, ry; // red
+int bx, by; // blue
+int dx[4] = {-1, 0, 1, 0};
+int dy[4] = {0, 1, 0, -1};
+
+map<string, int> visited;
+
+string toIndex(int rx, int ry, int bx, int by){
+    string res = "";
+    res += to_string(rx);
+    res += to_string(ry);
+    res += to_string(bx);
+    res += to_string(by);
+    return res;
+}
+
+string move(int dire, int rx, int ry, int bx, int by) {
+    // 굴러가는 방향
+    return toIndex(rx, ry, bx, by);
+}
+
+
+int  bfs(){
+    queue<pair<string, int>> q;
+    string cur = toIndex(rx, ry, bx, by);
+    q.push({cur, 0});
+    visited[cur] = 1;
+
+    while(!q.empty()){
+        string index = q.front().first;
+        int crx = index[0] - '0';
+        int cry = index[1] - '0';
+        int cbx = index[2] - '0';
+        int cby = index[3] - '0';
+        int depth = q.front().second;
+        q.pop();
+
+        arr[crx][cry] = 'R';
+        arr[cbx][cby] = 'B';
+
+        for(int i = 0; i < 4; i++) {
+            string nextIndex = move(i, crx, cry, cbx, cby);
+            cout << "dire" << i << " " << nextIndex << "\n";
+            int nrx = nextIndex[0] - '0';
+            int nry = nextIndex[1] - '0';
+            int nbx = nextIndex[2] - '0';
+            int nby = nextIndex[3] - '0';
+            int nextDepth = depth + 1;
+
+            if(visited.count(nextIndex)){
+                // 이미 있음
+                continue;
+            }
+
+            if(nbx == hx && nby == hy){
+                // 파란색이 굴러떨어짐
+                continue;
+            }
+
+            if(nrx == hx && nry == hy && nbx != hx && nby != hy){
+//                cout << "next Depth \n";
+                return nextDepth;
+            }
+
+            visited[nextIndex] = 1;
+            q.push({nextIndex, nextDepth});
+        }
+
+        arr[crx][cry] = '.';
+        arr[cbx][cby] = '.';
+    }
+
+    return -1;
+}
+
+int main() {
+    cin >>n >> m;
+
+    for(int i = 0; i < n; i++){
+        for(int j = 0; j < m; j++){
+            cin >> arr[i][j];
+            if(arr[i][j] == 'O'){
+                hx = i; hy = j;
+            }else if(arr[i][j] == 'R'){
+                rx = i; ry = j;
+                arr[i][j] = '.';
+            }else if(arr[i][j] == 'B'){
+                bx = i; by = j;
+                arr[i][j] = '.';
+            }
+        }
+    }
+
+//    for(int i = 0; i < n; i++){
+//        for(int j = 0; j < m; j++){
+//            cout << arr[i][j] << " ";
+//        }
+//        cout << "\n";
+//    }
+
+    cout << bfs() << "\n";
+
+    return 0;
+}
+```
+
+        -1, 0
+
+0, -1 0,0 0, 1
+1, 0
