--- a/week7/24.md
+++ b/week7/24.md
@@ -12,6 +12,8 @@
 
 - visited의 경우에는 각 좌표를 rx, ry, bx, by 이런 좌표를 하나의 string으로 연결해서 어디를 방문했는지 안했는지를 체크했다.
 
+- queue<tuple(int, int, int, int)> q;
+
 ## My code
 
 - 정답:
