--- a/week7/26.md
+++ b/week7/26.md
@@ -1,8 +1,90 @@
 # Link to Question
+
 (bfs) 양: https://www.acmicpc.net/problem/3184
+
 ## Question Summary
+
+18m30s85
 
 ## My solution summary
 
+- 그냥 bfs를 여러번 돌리고 카운트를 세면된다.
+- 울타리가 없는 곳은 어차피 양도 늑대도 없어서 그냥 센다
+
 ## My code
 
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm>
+#include <queue>
+#include <map>
+
+using namespace std;
+
+char arr[251][251];
+bool visited[251][251];
+int r, c;
+int dx[4] = {-1, 0, 1, 0};
+int dy[4] = {0, 1, 0, -1};
+
+void bfs(int x, int y, int& count_sheep, int& count_wolf){
+    queue<pair<int, int>> q;
+    q.push({x, y});
+    visited[x][y] = true;
+
+    while(!q.empty()){
+        int cx = q.front().first;
+        int cy = q.front().second;
+        q.pop();
+
+        for(int i = 0; i < 4; i++){
+            int nx = cx + dx[i];
+            int ny = cy + dy[i];
+
+            if(nx < 0 || nx >= r || ny < 0 || ny >= c || arr[nx][ny] == '#' || visited[nx][ny]){
+                continue;
+            }
+
+            visited[nx][ny] = true;
+            if(arr[nx][ny] == 'o'){
+                count_sheep++;
+            }else if(arr[nx][ny] == 'v'){
+                count_wolf++;
+            }
+            q.push({nx, ny});
+        }
+    }
+}
+
+int main() {
+    cin >> r >> c;
+
+    for(int i = 0; i < r; i++){
+        cin >> arr[i];
+    }
+
+    int total_sheep = 0;
+    int total_wolf = 0;
+    for(int i = 0; i < r; i++){
+        for(int j = 0; j < c; j++){
+            if(!visited[i][j]){
+                int count_sheep = 0;
+                int count_wolf = 0;
+
+                bfs(i, j, count_sheep, count_wolf);
+
+                if(count_sheep <= count_wolf){
+                    total_wolf += count_wolf;
+                }else {
+                    total_sheep += count_sheep;
+                }
+            }
+        }
+    }
+
+    cout << total_sheep << " " << total_wolf << "\n";
+
+    return 0;
+}
+```
