--- a/week7/27.md
+++ b/week7/27.md
@@ -1,8 +1,72 @@
 # Link to Question
+
 (bfs) 스타트링크: https://www.acmicpc.net/problem/5014
+
 ## Question Summary
+
+11m02s83
 
 ## My solution summary
 
+- 전형적인 bfs 문제였다.
+- 범위를 잘 지정해주면 된다.
+-
+
 ## My code
 
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm>
+#include <queue>
+#include <map>
+
+using namespace std;
+
+int arr[1000001]; // 1부터 1000000까지 층
+
+int f, s, g, u, d;
+
+int main() {
+    cin >> f >> s >> g >> u >> d;
+
+//    arr[g] = 2; // 2면 도착, 1이면 지나간 것, 0이면 아예 안지나간것
+    arr[s] = 1;
+
+    queue<pair<int, int>> q;
+    q.push({s, 0});
+
+    int answer = -1;
+
+    while(!q.empty()){
+        int c = q.front().first;
+        int distance = q.front().second;
+        q.pop();
+
+        if(c == g){
+            answer = distance;
+            break;
+        }
+
+        int up = c + u;
+        if(up <= f && arr[up] == 0){
+            arr[up] = 1;
+            q.push({up, distance + 1});
+        }
+
+        int down = c - d;
+        if(down >= 1 && arr[down] == 0){
+            arr[down] = 1;
+            q.push({down, distance + 1});
+        }
+
+    }
+
+    if(answer == -1){
+        cout << "use the stairs\n";
+    }else{
+        cout << answer << "\n";
+    }
+    return 0;
+}
+```
