25번 - 나중에 다시 풀기

--- a/week7/25.md
+++ b/week7/25.md
@@ -1,8 +1,127 @@
 # Link to Question
+
 (bfs)과외맨: https://www.acmicpc.net/problem/5213
+
 ## Question Summary
+
+1h42m34s43(삽질한 시간)
 
 ## My solution summary
 
 ## My code
 
+- 삽질한 코드
+
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm>
+#include <queue>
+#include <map>
+#include <tuple>
+#include <deque>
+using namespace std;
+
+pair<int, int> arr[500][500 * 2]; // 이건 타일번호랑 값을 저장하는 것 {타일번호, 값}
+int visited[500][500*2]; // 방문했는지 안했는지만 체크 x,y에서 시작해서 nx, ny로 온경우가 발생했다
+
+int dx[4] = {-1, 0, 1, 0};
+int dy[4] = {0, 1, 0, -1};
+
+int main() {
+    int n; cin >> n;
+    int tileNum = 1;
+    int tileCount = 0;
+    for(int i = 0; i < n; i++){
+        int limit = i % 2 == 0 ? n * 2: n * 2 - 1;
+        int start = i % 2 == 0 ? 0 : 1;
+
+        for(int j = start; j < limit; j++){
+            int temp;
+            cin >> temp;
+            arr[i][j] = {tileNum, temp};
+            tileCount++;
+
+            if(tileCount == 2){
+                tileCount = 0;
+                tileNum++;
+            }
+        }
+    }
+
+    // 최대 tileNum
+    tileNum = tileNum - 1;
+
+    for(int i = 0; i < n; i++){
+        for(int j = 0; j < n*2; j++){
+            cout << arr[i][j].first << "," << arr[i][j].second << "  ";
+//            cout << arr[i][j].first << "  ";
+        }
+        cout << "\n";
+    }
+
+    deque<pair<pair<int, int>, int>> q;
+    q.push_back({{0, 0}, 0});
+    visited[0][0] = 1;
+
+    while(!q.empty()){
+        int x = q.front().first.first;
+        int y = q.front().first.second;
+        int distance = q.front().second;
+        cout << x << " " << y << " " << arr[x][y].first << " " << tileNum << "\n";
+        q.pop_front();
+
+        if(arr[x][y].first == tileNum){
+            cout << "Distance" << distance << "\n";
+            break;
+        }
+
+        for(int i = 0; i < 4; i++){
+            int nx = x + dx[i];
+            int ny = y + dy[i];
+//            int nDistance = distance;
+            if(nx % 2 == 0){
+                if(nx < 0 || nx >= n * 2 || ny < 0 || ny >= n){
+//                    cout << "==\n";
+                    continue;
+                }
+            }else {
+                if(nx < 1 || nx >= n * 2 - 1 || ny < 0 || ny >= n){
+//                    cout << "!!\n";
+                    continue;
+                }
+            }
+
+            // x, y에서 nx, ny로 가는 상태를 체크
+            if(visited[nx][ny] != 0){
+                // 누군가 방문 한곳
+//                cout << "here\n";
+                continue;
+            }
+
+            if(arr[nx][ny].first == 0){ // 타일번호가 0이라 못가는 곳
+                // 0이라 못가는 곳
+//                cout << "here2\n";x
+                continue;
+            }
+
+            if(arr[x][y].first != arr[nx][ny].first){
+                // 기존이랑 타일번호가 같으면 거리가 증가를 안한다, 다르면 거리 증가
+                // 타일 번호가 기존이랑 다르면 번호가 같아야만 이동가능
+                if(arr[x][y].second == arr[nx][ny].second){
+                    cout << "push======" << arr[nx][ny].first << " " <<  arr[nx][ny].second << "\n";
+                    visited[nx][ny] = 1;
+                    q.push_back({{nx, ny}, distance + 1});
+                }
+            }else{
+                // 타일번호가 같으면 그냥 이동가능
+                cout << "push!!!!!!" << arr[nx][ny].first << " " <<  arr[nx][ny].second  << "\n";
+                visited[nx][ny] = 1; // x와 y 포인트에서 온것
+                q.push_front({{nx, ny}, distance});
+            }
+        }
+    }
+
+    return 0;
+}
+```
