--- a/week8/28.md
+++ b/week8/28.md
@@ -4,6 +4,127 @@
 
 ## Question Summary
 
+57m32s55
+
 ## My solution summary
 
+- 일단 이문제는 d[100][100][100] 이런식으로 하면 메모리 초과같은게 난다. 그래서 map으로 경우를 생성하는것으로 바꿨다.
+
+- 그리고 이문제의 경우
+  10, 15, 35 가있을깨 한번 바꿔가지고 20, 5, 35 가되었다가, 다시 15, 10, 35 이렇게 되면서 쓸데없이 반복하는게 엄청 많아서, 이러면 시간초과가 나서 항상 돌멩이 순서를 오름차순으로 관리해서, 한번이라도 나왔던 세트면 방문하지 않도록 했다.
+
+그래서 처음에 tuple로 해결하다가 sorting이 쉬운 vector 큐로 문제를 해결했다.
+
+생각보다 정답률이 낮은것이 푼 사람이 많이 없는것 같기도하다.
+
 ## My code
+
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm>
+#include <queue>
+#include <map>
+#include <tuple>
+#include <deque>
+using namespace std;
+
+int a, b, c;
+
+map<string, int> m;
+
+string intToString(vector<int> v){
+    int a = v[0];
+    int b = v[1];
+    int c = v[2];
+
+    string s = "";
+    s += to_string(a);
+    s += ',';
+
+    s += to_string(b);
+    s += ',';
+
+    s += to_string(c);
+    return s;
+}
+
+int main() {
+    cin >> a >> b >> c;
+
+    vector<int> v(3);
+    v[0] = a; v[1] = b; v[2] = c;
+    sort(v.begin(), v.end());
+
+    // 정렬해서 넣는다
+    m[intToString(v)] = 1;
+    queue<vector<int>> q;
+    q.push(v);
+
+    bool found = false;
+
+    while(!q.empty()){
+        int ca = q.front()[0];
+        int cb = q.front()[1];
+        int cc = q.front()[2];
+        q.pop();
+
+        if(ca == cb && cb == cc){
+            found = true;
+            break;
+        }
+
+        int x, y, z;
+        string index;
+        vector<int> next(3);
+
+        if(ca < cb){
+            next[0] = ca + ca;
+            next[1] = cb - ca;
+            next[2] = cc;
+            sort(next.begin(), next.end());
+            index = intToString(next);
+
+            if(m.count(index) == 0){
+                m[index] = 1;
+                q.push(next);
+            }
+        }
+
+        if(ca < cc){
+            next[0] = ca + ca;
+            next[1] = cb;
+            next[2] = cc - ca;
+            sort(next.begin(), next.end());
+            index = intToString(next);
+
+            if(m.count(index) == 0){
+                m[index] = 1;
+                q.push(next);
+            }
+        }
+
+        if(cb < cc){
+            next[0] = ca;
+            next[1] = cb + cb;
+            next[2] = cc - cb;
+            sort(next.begin(), next.end());
+            index = intToString(next);
+
+            if(m.count(index) == 0){
+                m[index] = 1;
+                q.push(next);
+            }
+        }
+    }
+
+
+    if(found){
+        cout << 1 << "\n";
+    }else{
+        cout << 0 << "\n";
+    }
+
+    return 0;
+}
+```
