--- a/week8/29.md
+++ b/week8/29.md
@@ -4,6 +4,97 @@
 
 ## Question Summary
 
+39m05s67
+
 ## My solution summary
 
+- 숫자를 하나씩 입력받는걸 못했다.
+  https://velog.io/@hk8778/CC-%EC%97%90%EC%84%9C-%EC%88%AB%EC%9E%90-%EB%B0%B0%EC%97%B4%EC%97%90-%ED%95%98%EB%82%98%EC%94%A9-%EC%9E%85%EB%A0%A5%EB%B0%9B%EA%B8%B0
+
+- 그외에는 벽을 뚫는 경우까지도 상태를 만들어서 체크해주면 된다.
+
 ## My code
+
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm>
+#include <queue>
+#include <map>
+#include <tuple>
+#include <deque>
+using namespace std;
+
+int n, m, k;
+int d[1000][1000][11];
+int arr[1000][1000];
+int dx[4] = {-1, 0, 1, 0};
+int dy[4] = {0, 1, 0, -1};
+
+int main() {
+    cin >> n >> m >> k;
+
+    for(int i = 0; i < n; i++){
+        for(int j = 0; j < m; j++){
+            scanf("%1d", &arr[i][j]);
+        }
+    }
+
+    // x, y, 부순갯수
+    queue<tuple<int, int, int>> q;
+    d[0][0][0] = 1; // 이동한 횟수를 기록
+    q.push(make_tuple(0, 0, 0));
+
+    while(!q.empty()){
+        int x = get<0>(q.front());
+        int y = get<1>(q.front());
+        int accK = get<2>(q.front());
+        int dist = d[x][y][accK];
+        q.pop();
+
+        for(int i = 0; i < 4; i++){
+            int nx = x + dx[i];
+            int ny = y + dy[i];
+            int nextDist = dist + 1;
+
+            if(nx < 0 || nx >= n || ny < 0 || ny >= m){
+                continue;
+            }
+
+            if(arr[nx][ny] == 0){
+                // 벽이 아닌 경우
+                if(d[nx][ny][accK] == 0){
+                    d[nx][ny][accK] = nextDist;
+                    q.push(make_tuple(nx, ny, accK)); // nx, ny이좌표까지 올때 accK개 벽을 뚫었다.
+                }
+            }else{
+                // 벽인 경우
+                if(accK < k && d[nx][ny][accK + 1] == 0){
+                    // 더 뚫을수 있으면 뚫어본다
+                    d[nx][ny][accK + 1] = nextDist;
+                    q.push(make_tuple(nx, ny, accK + 1)); // nx, ny이좌표까지 올때 accK + 1개 벽을 뚫었다.
+                }
+            }
+        }
+    }
+
+    int answer = 1000 * 1000 + 1;
+    bool found = false;
+
+    for(int i = 0; i <= k; i++){
+        int dd = d[n-1][m-1][i];
+        if(dd > 0 && answer > dd){
+            found = true;
+            answer = dd;
+        }
+    }
+
+    if(found){
+        cout << answer << "\n";
+    }else{
+        cout << -1 << "\n";
+    }
+
+    return 0;
+}
+```
