--- a/week8/30.md
+++ b/week8/30.md
@@ -4,6 +4,131 @@
 
 ## Question Summary
 
+1h18m47s94
+
+막상 푸는건 30분도 안걸렸는데, 삽질하고 k찾는데 40분정도 걸린 날이다. 오늘은 운수가 좋지가 않구만.
+
 ## My solution summary
 
+- `초기화할때 memset(d, -1, sizeof(d));`, #include<cstring>
+
+이문제는 단순한 bfs인데, 내가 삽질한 부분은 난데없는 이상한 부분이었다.
+
+```c++
+    bool found = false;
+    int answer = w*h+10;
+
+    for(int i = 0; i <= k; i++){
+        if(d[h-1][w-1][i] >= 1){
+            found = true;
+            if(answer > d[h-1][w-1][i]){
+                answer = d[h-1][w-1][i];
+            }
+        }
+    }
+```
+
+여기서 k까지인데, 인덱스를 잘못 포함시켜서 삽질을 무지하게 했다.
+
+- 그리고 99프로쯤인가에서 틀렸다고 나온건, 크기가 1,1인 것도 인풋으로 넣어서 테스트를 하는 것 같다.
+
 ## My code
+
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm>
+#include <queue>
+#include <map>
+#include <tuple>
+#include <deque>
+#include <string>
+using namespace std;
+
+int k;
+int w, h;
+int arr[200][200];
+int d[200][200][31];
+
+int dx1[4] = {-1, 0, 1, 0};
+int dy1[4] = {0, 1, 0, -1};
+
+int dx2[8] = {-2, -1, 1, 2, 2, 1, -1, -2};
+int dy2[8] = {1, 2, 2, 1, -1, -2, -2, -1};
+
+int main() {
+    cin >> k;
+    cin >> w >> h;
+
+    for(int i = 0; i < h; i++){
+        for(int j = 0; j < w; j++){
+            cin >> arr[i][j];
+        }
+    }
+
+    queue<tuple<int, int, int>> q; // x, y, k 한 횟수
+    q.push(make_tuple(0, 0, 0));
+    d[0][0][0] = 1; // 시작 이동횟수를 1로 지정
+
+    bool flag = true;
+    while(!q.empty()){
+        int x = get<0>(q.front());
+        int y = get<1>(q.front());
+        int kCount = get<2>(q.front());
+        q.pop();
+
+        // k 만큼 다 이동했으면 안됨 넘어가자
+        // 말 이동할떄
+        for (int i = 0; i < 8; i++) {
+            int nx = x + dx2[i];
+            int ny = y + dy2[i];
+            int next_kCount = kCount + 1; // k 횟수 그냥 그대로
+
+
+            if (nx < 0 || nx >= h || ny < 0 || ny >= w || arr[nx][ny] == 1 || d[nx][ny][next_kCount] != 0 ||
+                next_kCount > k) {
+                continue;
+            }
+
+            d[nx][ny][next_kCount] = d[x][y][kCount] + 1;
+            q.push(make_tuple(nx, ny, next_kCount));
+        }
+
+        // 원숭이 이동할때
+
+        for (int i = 0; i < 4; i++) {
+            int nx = x + dx1[i];
+            int ny = y + dy1[i];
+            int next_kCount = kCount; // k횟수 그냥 그대로
+
+            if (nx < 0 || nx >= h || ny < 0 || ny >= w || arr[nx][ny] == 1 || d[nx][ny][next_kCount] != 0) {
+                continue;
+            }
+
+            d[nx][ny][next_kCount] = d[x][y][kCount] + 1;
+            q.push(make_tuple(nx, ny, next_kCount));
+
+        }
+    }
+
+    // 시작점을 이동횟수 1로 한다음 나중에 다 뺄거다
+    bool found = false;
+    int answer = w*h+10;
+
+    for(int i = 0; i <= k; i++){
+        if(d[h-1][w-1][i] >= 1){
+            found = true;
+            if(answer > d[h-1][w-1][i]){
+                answer = d[h-1][w-1][i];
+            }
+        }
+    }
+
+    if(found){
+        cout << answer-1 << "\n";
+    }else{
+        cout << "-1\n";
+    }
+    return 0;
+}
+```
