--- a/week8/31.md
+++ b/week8/31.md
@@ -4,6 +4,131 @@
 
 ## Question Summary
 
+24m36s77
+
 ## My solution summary
 
+그냥 bfs 두개를 돌렸고, 적록 색맹거 구할때는 G를 다 R로 바꿔버렸다.
+
+아직 문자열 입력이 익숙하지가 않은데, character가 연달아서 들어오는 경우에는 아래의 방식처럼 받아서 문제를 해결하려고 한다.
+
+```c++
+char arr[100][101];
+for(int i = 0; i < n; i++){
+    cin >> arr[i];
+}
+```
+
 ## My code
+
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm>
+#include <queue>
+#include <map>
+#include <tuple>
+#include <deque>
+#include <string>
+#include <cstring> //  초기화할때 memset(d, -1, sizeof(d));
+#include <stdio.h>
+
+using namespace std;
+
+int n;
+char arr[100][101];
+int visited1[100][100];
+int visited2[100][100];
+
+int answer1 = 0;
+int answer2 = 0;
+
+int dx[4] = {-1, 0, 1, 0};
+int dy[4] = {0, 1, 0, -1};
+
+void bfs_1(char letter, int i, int j) {
+    queue<pair<int, int>> q;
+    q.push({i, j});
+
+    while(!q.empty()){
+        int x = q.front().first;
+        int y = q.front().second;
+        q.pop();
+
+        for(int i = 0; i < 4; i++){
+            int nx = x + dx[i];
+            int ny = y + dy[i];
+
+            if(nx < 0 || nx >= n || ny < 0 || ny >= n || arr[nx][ny] != letter || visited1[nx][ny] == 1){
+                continue;
+            }
+
+            visited1[nx][ny] = 1;
+            q.push({nx, ny});
+        }
+    }
+}
+
+
+void bfs_2(char letter, int i, int j) {
+    queue<pair<int, int>> q;
+    q.push({i, j});
+
+    while(!q.empty()){
+        int x = q.front().first;
+        int y = q.front().second;
+        q.pop();
+
+        for(int i = 0; i < 4; i++){
+            int nx = x + dx[i];
+            int ny = y + dy[i];
+
+            if(nx < 0 || nx >= n || ny < 0 || ny >= n || arr[nx][ny] != letter || visited2[nx][ny] == 1){
+                continue;
+            }
+
+            visited2[nx][ny] = 1;
+            q.push({nx, ny});
+        }
+    }
+}
+
+int main() {
+    cin >> n;
+
+    for(int i = 0; i < n; i++){
+        cin >> arr[i];
+    }
+
+    for(int i = 0; i < n; i++){
+        for(int j = 0; j < n; j++){
+            if(visited1[i][j] != 1){
+                answer1++;
+                visited1[i][j] = 1;
+                bfs_1(arr[i][j], i, j);
+            }
+        }
+    }
+
+    for(int i = 0; i < n; i++){
+        for(int j = 0; j < n; j++){
+            if(arr[i][j] == 'G'){
+                arr[i][j] = 'R';
+            }
+        }
+    }
+
+    for(int i = 0; i < n; i++){
+        for(int j = 0; j < n; j++){
+            if(visited2[i][j] != 1){
+                answer2++;
+                visited2[i][j] = 1;
+                bfs_2(arr[i][j], i, j);
+            }
+        }
+    }
+
+    cout << answer1 << " " << answer2 << "\n";
+    return 0;
+}
+```
