32번 다시풀기

--- a/week8/32.md
+++ b/week8/32.md
@@ -4,6 +4,188 @@
 
 ## Question Summary
 
+완전 망해서 포기할때까지 1h33m32s68 걸림
+
 ## My solution summary
 
+- 테스트 케이스?
+  https://upload.acmicpc.net/2d62ed19-ea92-4a35-a016-11d02581e542/
+
 ## My code
+
+-망한 코드
+
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm>
+#include <queue>
+#include <map>
+#include <tuple>
+#include <deque>
+#include <string>
+#include <cstring> //  초기화할때 memset(d, -1, sizeof(d));
+#include <stdio.h>
+
+using namespace std;
+
+int arr[200][200];
+int visited[200][200];
+int visited2[200][200];
+int rSize[200*200+10];
+vector<int> open[16];
+
+int n, m;
+
+int dx[4] = {-1, 0, 1, 0};
+int dy[4] = { 0, 1, 0, -1};
+
+int bfs(int i, int j, int roomCount){
+    queue<pair<int, int>> q;
+    int size = 0;
+    q.push({i, j});
+
+    while(!q.empty()){
+        int x = q.front().first;
+        int y = q.front().second;
+        size++;
+        q.pop();
+
+        vector<int> dire = open[arr[x][y]];
+
+        if(dire.size() == 0){
+            continue;
+        }
+
+        if(dire[0] == -1){
+            continue;
+        }
+
+        for(int i = 0; i < dire.size(); i++){
+            int curDire = dire[i];
+            int nx = x + dx[curDire];
+            int ny = y + dy[curDire];
+
+            if(nx < 0 || nx >= m || ny < 0 || ny >= n || visited[nx][ny] != 0){
+                continue;
+            }
+
+            visited[nx][ny] = roomCount;
+            q.push({nx, ny});
+        }
+    }
+
+    return size;
+}
+
+vector<int> bfs2(int i, int j, int roomNum){
+    queue<pair<int, int>> q;
+    vector<int> around;
+    q.push({i, j});
+
+    while(!q.empty()){
+        int x = q.front().first;
+        int y = q.front().second;
+        q.pop();
+
+        for(int i = 0; i < 4; i++){
+            int nx = x + dx[i];
+            int ny = y + dy[i];
+
+            if(nx < 0 || nx >= m || ny < 0 || ny >= n || visited2[nx][ny] == roomNum){
+                continue;
+            }
+
+            if(visited[nx][ny] != roomNum){
+                around.push_back(visited[nx][ny]);
+                continue;
+            }
+
+            visited2[nx][ny] = roomNum;
+            q.push({nx, ny});
+        }
+    }
+
+    return around;
+}
+
+int main() {
+    cin >> n >> m;
+
+    for(int i = 0; i < m; i++){
+        for(int j = 0; j < n; j++){
+            cin >> arr[i][j];
+        }
+    }
+
+    // 이진법으로 하면 되는거였다. 8421 이렇게
+    open[1].push_back(0); open[1].push_back(1); open[1].push_back(2);
+    open[2].push_back(1); open[2].push_back(2); open[2].push_back(3);
+    open[4].push_back(0); open[4].push_back(2); open[4].push_back(3);
+    open[8].push_back(0); open[8].push_back(1); open[8].push_back(3);
+    open[3].push_back(1); open[3].push_back(2);
+    open[5].push_back(0); open[5].push_back(2);
+    open[9].push_back(0); open[9].push_back(1);
+    open[13].push_back(0);
+    open[6].push_back(2); open[6].push_back(3);
+    open[10].push_back(1); open[10].push_back(3);
+    open[12].push_back(0); open[12].push_back(3);
+    open[7].push_back(2);
+    open[11].push_back(1);
+    open[14].push_back(3);
+    open[15].push_back(-1);
+
+    int maxRoom = 0;
+    int roomCount = 0;
+    for(int i = 0; i < m; i++){
+        for(int j = 0; j < n; j++){
+            if(visited[i][j] == 0) {
+                roomCount++;
+                visited[i][j] = roomCount;
+
+                int roomSize = bfs(i, j, roomCount);
+
+                rSize[roomCount] = roomSize;
+                if(roomSize > maxRoom){
+                    maxRoom = roomSize;
+                }
+            }
+        }
+    }
+
+    int maxTwoRoom = 0;
+    for(int i = 0; i < m; i++){
+        for(int j = 0; j < n; j++){
+            int curRoom = visited[i][j];
+            if(visited2[i][j] != curRoom) {
+                visited2[i][j] = curRoom;
+                vector<int> around = bfs2(i, j, curRoom);
+
+                unique(around.begin(),around.end());
+
+                for(int k = 0; k < around.size(); k++){
+                    int combined = rSize[curRoom] + rSize[around[k]];
+
+                    if(combined > maxTwoRoom){
+                        maxTwoRoom = combined;
+                    }
+                }
+            }
+        }
+    }
+
+//    for(int i = 0; i < m; i++){
+//        for(int j = 0; j < n; j++){
+//            cout << visited[i][j] << " ";
+//        }
+//        cout << "\n";
+//    }
+
+
+    cout << roomCount << "\n";
+    cout << maxRoom << "\n";
+    cout << maxTwoRoom << "\n";
+
+    return 0;
+}
+```
